@@ -1,8 +1,10 @@
 package org.opentripplanner.gtfs.mapping;
 
+import static com.google.common.truth.Truth.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.List;
@@ -10,30 +12,25 @@ import org.junit.jupiter.api.Test;
 import org.onebusaway.gtfs.model.AgencyAndId;
 import org.onebusaway.gtfs.model.FareProduct;
 import org.onebusaway.gtfs.model.FareTransferRule;
-import org.opentripplanner.graph_builder.issue.api.DataImportIssueStore;
-import org.opentripplanner.graph_builder.issue.service.DefaultDataImportIssueStore;
 
 class FareTransferRuleMapperTest {
 
-  final String feedId = "A";
+  private static final String FEED_ID = "A";
+  private static final IdFactory ID_FACTORY = new IdFactory(FEED_ID);
   final String productId = "123";
-  final AgencyAndId id = new AgencyAndId(feedId, productId);
-  final AgencyAndId groupId1 = new AgencyAndId(feedId, "group1");
-  final AgencyAndId groupId2 = new AgencyAndId(feedId, "group2");
+  final AgencyAndId id = new AgencyAndId(FEED_ID, productId);
+  final AgencyAndId groupId1 = new AgencyAndId(FEED_ID, "group1");
+  final AgencyAndId groupId2 = new AgencyAndId(FEED_ID, "group2");
 
   @Test
-  void addIssueForUnknownProduct() {
-    var fareProductMapper = new FareProductMapper();
-    var issueStore = new DefaultDataImportIssueStore();
-    var subject = new FareTransferRuleMapper(fareProductMapper, issueStore);
+  void throwOnUnknownFareProduct() {
+    var fareProductMapper = new FareProductMapper(ID_FACTORY);
+    var subject = new FareTransferRuleMapper(ID_FACTORY, fareProductMapper);
 
     var rule = new FareTransferRule();
     rule.setFareProductId(id);
 
-    var mapped = subject.map(List.of(rule));
-
-    assertTrue(mapped.isEmpty());
-    assertEquals("UnknownFareProductId", issueStore.listIssues().get(0).getType());
+    assertThrows(IllegalArgumentException.class, () -> subject.map(List.of(rule)));
   }
 
   @Test
@@ -44,7 +41,7 @@ class FareTransferRuleMapperTest {
     rule.setFareProductId(id);
 
     var transferRule = map(fareProduct, rule);
-    assertEquals(feedId, transferRule.feedId());
+    assertEquals(FEED_ID, transferRule.feedId());
     assertNull(transferRule.fromLegGroup());
     assertNull(transferRule.toLegGroup());
   }
@@ -64,6 +61,19 @@ class FareTransferRuleMapperTest {
     assertEquals(groupId2.getId(), transferRule.toLegGroup().getId());
   }
 
+  @Test
+  void ruleWithoutProductIsFree() {
+    var rule = new FareTransferRule();
+    rule.setFromLegGroupId(groupId1);
+    rule.setToLegGroupId(groupId2);
+
+    var fareProductMapper = new FareProductMapper(ID_FACTORY);
+    var subject = new FareTransferRuleMapper(ID_FACTORY, fareProductMapper);
+    var transferRule = subject.map(List.of(rule)).stream().toList().getFirst();
+    assertTrue(transferRule.isFree());
+    assertThat(transferRule.fareProducts()).isEmpty();
+  }
+
   private FareProduct fareProduct() {
     var fareProduct = new FareProduct();
     fareProduct.setId(id);
@@ -78,15 +88,15 @@ class FareTransferRuleMapperTest {
     FareProduct fareProduct,
     FareTransferRule rule
   ) {
-    var fareProductMapper = new FareProductMapper();
+    var fareProductMapper = new FareProductMapper(ID_FACTORY);
     fareProductMapper.map(fareProduct);
 
-    var subject = new FareTransferRuleMapper(fareProductMapper, DataImportIssueStore.NOOP);
+    var subject = new FareTransferRuleMapper(ID_FACTORY, fareProductMapper);
 
     var mapped = subject.map(List.of(rule)).stream().toList();
 
     assertFalse(mapped.isEmpty());
 
-    return mapped.get(0);
+    return mapped.getFirst();
   }
 }
