@@ -17,6 +17,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Set;
+import javax.annotation.Nullable;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.opentripplanner.GtfsTest;
@@ -34,29 +35,30 @@ import org.opentripplanner.transit.service.TransitService;
 import org.opentripplanner.updater.DefaultRealTimeUpdateContext;
 import org.opentripplanner.updater.GraphUpdaterManager;
 import org.opentripplanner.updater.RealTimeUpdateContext;
-import uk.org.ifopt.siri20.StopPlaceRef;
-import uk.org.siri.siri20.AffectedLineStructure;
-import uk.org.siri.siri20.AffectedRouteStructure;
-import uk.org.siri.siri20.AffectedStopPlaceStructure;
-import uk.org.siri.siri20.AffectedStopPointStructure;
-import uk.org.siri.siri20.AffectedVehicleJourneyStructure;
-import uk.org.siri.siri20.AffectsScopeStructure;
-import uk.org.siri.siri20.DataFrameRefStructure;
-import uk.org.siri.siri20.DatedVehicleJourneyRef;
-import uk.org.siri.siri20.DefaultedTextStructure;
-import uk.org.siri.siri20.FramedVehicleJourneyRefStructure;
-import uk.org.siri.siri20.HalfOpenTimestampOutputRangeStructure;
-import uk.org.siri.siri20.InfoLinkStructure;
-import uk.org.siri.siri20.LineRef;
-import uk.org.siri.siri20.PtSituationElement;
-import uk.org.siri.siri20.RoutePointTypeEnumeration;
-import uk.org.siri.siri20.ServiceDelivery;
-import uk.org.siri.siri20.SeverityEnumeration;
-import uk.org.siri.siri20.SituationExchangeDeliveryStructure;
-import uk.org.siri.siri20.SituationNumber;
-import uk.org.siri.siri20.StopPointRef;
-import uk.org.siri.siri20.VehicleJourneyRef;
-import uk.org.siri.siri20.WorkflowStatusEnumeration;
+import uk.org.ifopt.siri21.StopPlaceRef;
+import uk.org.siri.siri21.AffectedLineStructure;
+import uk.org.siri.siri21.AffectedRouteStructure;
+import uk.org.siri.siri21.AffectedStopPlaceStructure;
+import uk.org.siri.siri21.AffectedStopPointStructure;
+import uk.org.siri.siri21.AffectedVehicleJourneyStructure;
+import uk.org.siri.siri21.AffectsScopeStructure;
+import uk.org.siri.siri21.DataFrameRefStructure;
+import uk.org.siri.siri21.DatedVehicleJourneyRef;
+import uk.org.siri.siri21.DefaultedTextStructure;
+import uk.org.siri.siri21.FramedVehicleJourneyRefStructure;
+import uk.org.siri.siri21.HalfOpenTimestampOutputRangeStructure;
+import uk.org.siri.siri21.InfoLinkStructure;
+import uk.org.siri.siri21.LineRef;
+import uk.org.siri.siri21.PtSituationElement;
+import uk.org.siri.siri21.ReportTypeEnumeration;
+import uk.org.siri.siri21.RoutePointTypeEnumeration;
+import uk.org.siri.siri21.ServiceDelivery;
+import uk.org.siri.siri21.SeverityEnumeration;
+import uk.org.siri.siri21.SituationExchangeDeliveryStructure;
+import uk.org.siri.siri21.SituationNumber;
+import uk.org.siri.siri21.StopPointRefStructure;
+import uk.org.siri.siri21.VehicleJourneyRef;
+import uk.org.siri.siri21.WorkflowStatusEnumeration;
 
 public class SiriAlertsUpdateHandlerTest extends GtfsTest {
 
@@ -131,7 +133,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     ptSituation.setInfoLinks(new PtSituationElement.InfoLinks());
     ptSituation.getInfoLinks().getInfoLinks().add(infoLink);
 
-    final String reportType = "incident";
+    final ReportTypeEnumeration reportType = ReportTypeEnumeration.INCIDENT;
     ptSituation.setReportType(reportType);
     ptSituation.setSeverity(SeverityEnumeration.SEVERE);
 
@@ -147,7 +149,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     final TransitAlert transitAlert = stopPatches.iterator().next();
 
     assertEquals(situationNumber, transitAlert.getId().getId());
-    assertEquals(reportType, transitAlert.type());
+    assertEquals(reportType.value(), transitAlert.type());
     assertEquals(AlertSeverity.SEVERE, transitAlert.severity());
     assertEquals(priorityValue, transitAlert.priority());
 
@@ -200,7 +202,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     assertFalse(transitAlert.siriUrls().isEmpty());
 
     final List<AlertUrl> alertUrlList = transitAlert.siriUrls();
-    AlertUrl alertUrl = alertUrlList.get(0);
+    AlertUrl alertUrl = alertUrlList.getFirst();
     assertEquals(infoLinkUri, alertUrl.uri());
     assertEquals(infoLinkLabel, alertUrl.label());
   }
@@ -241,7 +243,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     period_2.setEndTime(endTimePeriod_2);
     ptSituation.getValidityPeriods().add(period_2);
 
-    final String reportType = "incident";
+    final ReportTypeEnumeration reportType = ReportTypeEnumeration.INCIDENT;
     ptSituation.setReportType(reportType);
     ptSituation.setSeverity(SeverityEnumeration.SEVERE);
 
@@ -276,10 +278,10 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
       situationNumber,
       ZonedDateTime.parse("2014-01-01T00:00:00+01:00"),
       ZonedDateTime.parse("2014-01-01T23:59:59+01:00"),
-      createAffectsStop(null, stopId0.getId(), stopId1.getId())
+      createAffectsStop(List.of(), stopId0.getId(), stopId1.getId())
     );
 
-    final String reportType = "incident";
+    final ReportTypeEnumeration reportType = ReportTypeEnumeration.INCIDENT;
     ptSituation.setReportType(reportType);
 
     final SeverityEnumeration severity = SeverityEnumeration.SEVERE;
@@ -361,7 +363,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
       situationNumber,
       startTime,
       endTime,
-      createAffectsFramedVehicleJourney(tripId.getId(), "2014-01-01", null)
+      createAffectsFramedVehicleJourney(tripId.getId(), "2014-01-01")
     );
 
     alertsUpdateHandler.update(createServiceDelivery(ptSituation), realTimeUpdateContext);
@@ -411,7 +413,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
       situationNumber,
       startTime,
       endTime,
-      createAffectsFramedVehicleJourney(tripId.getId(), null, null)
+      createAffectsFramedVehicleJourney(tripId.getId(), null)
     );
 
     alertsUpdateHandler.update(createServiceDelivery(ptSituation), realTimeUpdateContext);
@@ -427,8 +429,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     final TransitAlert datedTransitAlert = tripPatches.iterator().next();
 
     // Verify that NOT requesting specific date includes alert for all dates
-    serviceDate = null;
-    tripPatches = transitAlertService.getTripAlerts(tripId, serviceDate);
+    tripPatches = transitAlertService.getTripAlerts(tripId);
 
     assertNotNull(tripPatches);
     assertEquals(1, tripPatches.size());
@@ -471,7 +472,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
       situationNumber,
       startTime,
       endTime,
-      createAffectsVehicleJourney(tripId.getId(), startTime, null)
+      createAffectsVehicleJourney(tripId.getId(), startTime)
     );
 
     alertsUpdateHandler.update(createServiceDelivery(ptSituation), realTimeUpdateContext);
@@ -555,7 +556,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
       situationNumber,
       startTime,
       endTime,
-      createAffectsDatedVehicleJourney(tripId.getId(), null)
+      createAffectsDatedVehicleJourney(tripId.getId())
     );
 
     alertsUpdateHandler.update(createServiceDelivery(ptSituation), realTimeUpdateContext);
@@ -591,7 +592,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
       situationNumber,
       startTime,
       endTime,
-      createAffectsLine(lineRef.getId(), null)
+      createAffectsLine(lineRef.getId())
     );
 
     final ServiceDelivery serviceDelivery = createServiceDelivery(ptSituation);
@@ -637,7 +638,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
       situationNumber,
       startTime,
       endTime,
-      createAffectsLine(lineRef.getId(), null)
+      createAffectsLine(lineRef.getId())
     );
 
     alertsUpdateHandler.update(createServiceDelivery(ptSituation), realTimeUpdateContext);
@@ -657,7 +658,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
       situationNumber,
       startTime,
       endTime,
-      createAffectsLine(lineRef.getId(), null)
+      createAffectsLine(lineRef.getId())
     );
 
     ptSituation.setProgress(WorkflowStatusEnumeration.CLOSED);
@@ -871,14 +872,14 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
 
   private PtSituationElement createPtSituationElement(
     String situationNumber,
-    ZonedDateTime startTime,
-    ZonedDateTime endTime,
+    @Nullable ZonedDateTime startTime,
+    @Nullable ZonedDateTime endTime,
     AffectsScopeStructure affects
   ) {
     PtSituationElement element = new PtSituationElement();
     element.setCreationTime(ZonedDateTime.now());
     element.setProgress(WorkflowStatusEnumeration.OPEN);
-    if ((startTime != null) | (endTime != null)) {
+    if ((startTime != null) || (endTime != null)) {
       HalfOpenTimestampOutputRangeStructure period = new HalfOpenTimestampOutputRangeStructure();
 
       if (startTime != null) {
@@ -912,13 +913,11 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     AffectsScopeStructure.StopPoints stopPoints = new AffectsScopeStructure.StopPoints();
 
     for (String stopId : stopIds) {
-      StopPointRef stopPointRef = new StopPointRef();
+      StopPointRefStructure stopPointRef = new StopPointRefStructure();
       stopPointRef.setValue(stopId);
       AffectedStopPointStructure affectedStopPoint = new AffectedStopPointStructure();
       affectedStopPoint.setStopPointRef(stopPointRef);
-      if (stopConditions != null) {
-        affectedStopPoint.getStopConditions().addAll(stopConditions);
-      }
+      affectedStopPoint.getStopConditions().addAll(stopConditions);
       stopPoints.getAffectedStopPoints().add(affectedStopPoint);
     }
 
@@ -1025,7 +1024,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
 
   private AffectsScopeStructure createAffectsFramedVehicleJourney(
     String datedVehicleJourney,
-    String dataFrameValue,
+    @Nullable String dataFrameValue,
     String... stopIds
   ) {
     AffectsScopeStructure affects = new AffectsScopeStructure();
@@ -1042,7 +1041,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     }
     affectedVehicleJourney.setFramedVehicleJourneyRef(framedVehicleJourneyRef);
 
-    if (stopIds != null) {
+    if (stopIds.length > 0) {
       AffectedRouteStructure affectedRoute = new AffectedRouteStructure();
       AffectedRouteStructure.StopPoints stopPoints = createAffectedStopPoints(stopIds);
       affectedRoute.setStopPoints(stopPoints);
@@ -1059,7 +1058,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     AffectedRouteStructure.StopPoints stopPoints = new AffectedRouteStructure.StopPoints();
     for (String stopId : stopIds) {
       AffectedStopPointStructure affectedStopPoint = new AffectedStopPointStructure();
-      StopPointRef stopPointRef = new StopPointRef();
+      StopPointRefStructure stopPointRef = new StopPointRefStructure();
       stopPointRef.setValue(stopId);
       affectedStopPoint.setStopPointRef(stopPointRef);
       stopPoints.getAffectedStopPointsAndLinkProjectionToNextStopPoints().add(affectedStopPoint);
@@ -1082,7 +1081,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     affectedVehicleJourney.getVehicleJourneyReves().add(vehicleJourney);
     affectedVehicleJourney.setOriginAimedDepartureTime(originAimedDepartureTime);
 
-    if (stopIds != null) {
+    if (stopIds.length > 0) {
       AffectedRouteStructure affectedRoute = new AffectedRouteStructure();
       AffectedRouteStructure.StopPoints stopPoints = createAffectedStopPoints(stopIds);
       affectedRoute.setStopPoints(stopPoints);
@@ -1108,7 +1107,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     datedVehicleJourney.setValue(datedVehicleJourneyRef);
     affectedVehicleJourney.getDatedVehicleJourneyReves().add(datedVehicleJourney);
 
-    if (stopIds != null) {
+    if (stopIds.length > 0) {
       AffectedRouteStructure affectedRoute = new AffectedRouteStructure();
       AffectedRouteStructure.StopPoints stopPoints = createAffectedStopPoints(stopIds);
       affectedRoute.setStopPoints(stopPoints);
@@ -1133,7 +1132,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     TransitAlert transitAlert,
     FeedScopedId stopId,
     FeedScopedId routeOrTripId,
-    LocalDate serviceDate
+    @Nullable LocalDate serviceDate
   ) {
     boolean foundMatch = false;
     for (EntitySelector entity : transitAlert.entities()) {
@@ -1162,7 +1161,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
     affectedLine.setLineRef(lineRef);
     affectedNetwork.getAffectedLines().add(affectedLine);
 
-    if (stopIds != null) {
+    if (stopIds.length > 0) {
       AffectedLineStructure.Routes routes = new AffectedLineStructure.Routes();
       AffectedRouteStructure affectedRoute = new AffectedRouteStructure();
 
@@ -1235,11 +1234,11 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
 
     networks.getAffectedNetworks().add(affectedNetwork);
     affects.setNetworks(networks);
-    if (stopIds != null) {
+    if (stopIds.length > 0) {
       AffectsScopeStructure.StopPoints stopPoints = new AffectsScopeStructure.StopPoints();
       for (String stopId : stopIds) {
         AffectedStopPointStructure affectedStopPoint = new AffectedStopPointStructure();
-        StopPointRef stopPointRef = new StopPointRef();
+        StopPointRefStructure stopPointRef = new StopPointRefStructure();
         stopPointRef.setValue(stopId);
         affectedStopPoint.setStopPointRef(stopPointRef);
         stopPoints.getAffectedStopPoints().add(affectedStopPoint);
@@ -1305,7 +1304,7 @@ public class SiriAlertsUpdateHandlerTest extends GtfsTest {
 
     networks.getAffectedNetworks().add(affectedNetwork);
     affects.setNetworks(networks);
-    if (stopIds != null) {
+    if (stopIds.length > 0) {
       AffectsScopeStructure.StopPlaces stopPlaces = new AffectsScopeStructure.StopPlaces();
       for (String stopId : stopIds) {
         AffectedStopPlaceStructure affectedStopPlaceStructure = new AffectedStopPlaceStructure();
